# TuneTablesLight

./: .gitignore  README.md  pyproject.toml  requirements.txt  ruff.toml
pt_scripts/: hparams.sh
tunetables/: __init__.py  encoders.py  model_configs.py  positional_encodings.py  run_baselines.py  run_optuna.py  train.py  train_loop.py  transformer.py  utils.py
tunetables/batch/: run_tt_job.py
tunetables/priors/: differentiable_prior.py  fast_gp.py  flexible_categorical.py  mlp.py  prior_bag.py  real.py  utils.py
tunetables/scripts/: decision_boundary.py  differentiable_pfn_evaluation.py  model_builder.py  model_configs.py  tabular_baselines.py  tabular_baselines_deep.py  transformer_prediction_interface.py
tunetables/tests/: test_deterministic_and_model_caching.py  test_follow_sklearn_interface.py  test_get_gradients.py  test_load_module_only_inference.py  test_standardization.py  test_tunetables_classifier.py  test_tunetables_light_classifier.py
tunetables_light/: __init__.py  encoders.py  fetch.py  layer.py  losses.py  model_configs.py  notebook_utils.py  run_baselines.py  run_optuna.py  train.py  train_loop.py  transformer.py  utils.py
tunetables_light/batch/: all_tasks.py
tunetables_light/my_model/: prefix_weights_0.npy
tunetables_light/priors/: __init__.py  differentiable_prior.py  fast_gp.py  flexible_categorical.py  mlp.py  prior_bag.py  real.py  utils.py
tunetables_light/scripts/: __init__.py  baseline_prediction_interface.py  differentiable_pfn_evaluation.py  model_builder.py  model_configs.py  param_grid.py  tabular_baselines.py  tabular_evaluation.py  tabular_metrics.py  transformer_prediction_interface.py
(+1 files in other folders)
